2004-04-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug after placing diagram dialog
	* fixed bug in scaling smith chart graphes
	* diagrams can show graph with multiple dimensions

2004-05-07  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (TRANSLATIONS): Added romanian translation file.

2004-05-01  Stefan Jahn  <stefan@lkcc.org>

	* qucs_it.ts: Applied changes made by Gorgio.  Thanks.

2004-04-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* strongly improved save as function
	* outsourced the initialization of QucsApp into QucsInit
	* polar diagrams correctly fit negative values
	* rectangle diagrams can show data containing only one point
	* fixed bug in component dialog (add property)
	* improved marker handling
	* "graphictext" can be rotated

2004-04-26  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/Makefile.am (PIC): Added 'mathfunc.html' and
	'contab.png' files to be installable files.

2004-04-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* added document for equation functions in help system
	* markers an graphs (marker.cpp/.h): pointer can be moved
	with cursor left/right

2004-04-16  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* small drawings at the mouse cursor to show the active
	action

2004-04-11  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* hinder keyboard input during element moving
	* CTRL+I=Go into Subcircuit, CTRL+H=Pop outside subcircuit,
	CTRL+B=set marker, CTRL+G=insert ground

2004-04-10  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* strongly speed up reading of datasets
	* speed up selecting of graphs
	* CTRL-L=insert wire label

2004-04-03  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* diagrams can show independent variables
	* fixed crash with messagebox class
	* rectdiagram: more beautiful
	* the graphs of diagrams can be selected.

2004-04-02  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
